# pipedream

./: .gitignore  Cargo.toml  README.md  run-docker.sh
files/: columns.txt  commands-post.txt  commands-remote.txt  commands.txt  ideas.txt
oc/: build-config-artifact.yaml  build-config-runtime.yaml  deployment-config.yaml  image-stream-artifact.yaml  image-stream.yaml  push-custom-image.md  route.yaml  service.yaml
src/: README.md  cat.rs  common.rs  cut.rs  grep.rs  head.rs  lib.rs  main.rs  pipe.rs  remote.rs  sort.rs  transform.rs  wget.rs
