[package]
name = "pipedream"
version = "0.1.0"
authors = ["Björn Löfroth <bjorn.lofroth@gmail.com>"]

[dependencies]
rocket = "0.3.2"
rocket_codegen = "0.3.2"
reqwest = "0.7.3"
itertools = "0.6.2"
regex = "0.2"
getopts = "0.2"
serde_urlencoded = "0.5"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "0.2"